<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".fragments.WelcomeFragment"
                                                   android:id="@+id/welcome_layout">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:id="@+id/welcome_first_layout"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:visibility="visible">
        <TextView
                android:text="@string/welcome_first_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/welcome_first_title" android:textSize="36sp"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/welcome_first_checking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/welcome_first_checking" android:textSize="30sp"
                android:textAlignment="center"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/welcome_activation_layout"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:visibility="gone">
        <TextView
                android:text="@string/welcome_activation_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/welcome_activation_title" android:textSize="36sp"
                android:textAlignment="center"/>
        <TextView
                android:text="@string/welcome_activation_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/welcome_activation_message"
                android:textSize="18sp"
                android:textAlignment="center"/>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:src="@android:drawable/ic_menu_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true" android:id="@+id/welcome_activation_button"
                app:rippleColor="@color/colorForeground"
                android:elevation="12dp" app:borderWidth="2dp"
                app:fabCustomSize="100dp" app:maxImageSize="70dp" app:backgroundTint="@color/colorPrimaryDark"
                android:layout_marginTop="30dp"
                android:layout_gravity="center" android:layout_marginBottom="30dp"/>
        <TextView
                android:text="@string/welcome_activation_activate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/welcome_activation_activate"
                android:textAlignment="center" android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="536dp"
            tools:layout_editor_absoluteX="32dp" android:id="@+id/welcome_configure_layout"/>
</androidx.constraintlayout.widget.ConstraintLayout>